--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "shivmangal",
   "license": "ISC",
   "dependencies": {
+    "chalk": "^4.1.1",
     "express": "^4.17.1",
     "pg": "^8.6.0"
   },
